Replace parallax_layer with section > div

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         transform-style: preserve-3d;
       }
 
-      .parallax__layer {
+      section > div {
         position: absolute;
         top: 0;
         left: 0;
@@ -74,7 +74,7 @@
         -webkit-transform: translate3d(800px, 0, -800px) rotateY(30deg);
         transform: translate3d(700px, 0, -800px) rotateY(30deg);
       }
-      .debug-on .parallax__layer {
+      .debug-on section > div {
         box-shadow: 0 0 0 2px #000;
         opacity: 0.9;
       }
@@ -147,55 +147,55 @@
   </head>
   <body>
     <section id="group1">
-      <div class="parallax__layer parallax__layer--base">
+      <div class="parallax__layer--base">
         <div class="title">Base Layer</div>
       </div>
     </section>
     <section id="group2">
-      <div class="parallax__layer parallax__layer--base">
+      <div class="parallax__layer--base">
         <div class="title">Base Layer</div>
       </div>
-      <div class="parallax__layer parallax__layer--back">
+      <div class="parallax__layer--back">
         <div class="title">Background Layer</div>
       </div>
     </section>
     <section id="group3">
-      <div class="parallax__layer parallax__layer--fore">
+      <div class="parallax__layer--fore">
         <div class="title">Foreground Layer</div>
       </div>
-      <div class="parallax__layer parallax__layer--base">
+      <div class="parallax__layer--base">
         <div class="title">Base Layer</div>
       </div>
     </section>
     <section id="group4">
-      <div class="parallax__layer parallax__layer--base">
+      <div class="parallax__layer--base">
         <div class="title">Base Layer</div>
       </div>
-      <div class="parallax__layer parallax__layer--back">
+      <div class="parallax__layer--back">
         <div class="title">Background Layer</div>
       </div>
-      <div class="parallax__layer parallax__layer--deep">
+      <div class="parallax__layer--deep">
         <div class="title">Deep Background Layer</div>
       </div>
     </section>
     <section id="group5">
-      <div class="parallax__layer parallax__layer--fore">
+      <div class="parallax__layer--fore">
         <div class="title">Foreground Layer</div>
       </div>
-      <div class="parallax__layer parallax__layer--base">
+      <div class="parallax__layer--base">
         <div class="title">Base Layer</div>
       </div>
     </section>
     <section id="group6">
-      <div class="parallax__layer parallax__layer--back">
+      <div class="parallax__layer--back">
         <div class="title">Background Layer</div>
       </div>
-      <div class="parallax__layer parallax__layer--base">
+      <div class="parallax__layer--base">
         <div class="title">Base Layer</div>
       </div>
     </section>
     <section id="group7">
-      <div class="parallax__layer parallax__layer--base">
+      <div class="parallax__layer--base">
         <div class="title">Base Layer</div>
       </div>
     </section>
