--- a/index.html
+++ b/index.html
@@ -44,25 +44,25 @@
         bottom: 0;
       }
 
-      .parallax__layer--fore {
+      section > div .foreground {
         -webkit-transform: translateZ(90px) scale(0.7);
         transform: translateZ(90px) scale(0.7);
         z-index: 1;
       }
 
-      .parallax__layer--base {
+      section > div .base {
         -webkit-transform: translateZ(0);
         transform: translateZ(0);
         z-index: 4;
       }
 
-      .parallax__layer--back {
+      section > div .back {
         -webkit-transform: translateZ(-300px) scale(2);
         transform: translateZ(-300px) scale(2);
         z-index: 3;
       }
 
-      .parallax__layer--deep {
+      section > div .deep {
         -webkit-transform: translateZ(-600px) scale(3);
         transform: translateZ(-600px) scale(3);
         z-index: 2;
@@ -98,104 +98,104 @@
       #group1 {
         z-index: 5; /* slide over group 2 */
       }
-      #group1 .parallax__layer--base {
+      #group1 > .base {
         background: rgb(102, 204, 102);
       }
 
       #group2 {
         z-index: 3; /* slide under groups 1 and 3 */
       }
-      #group2 .parallax__layer--back {
+      #group2 > .back {
         background: rgb(123, 210, 102);
       }
 
       #group3 {
         z-index: 4; /* slide over group 2 and 4 */
       }
-      #group3 .parallax__layer--base {
+      #group3 > .base {
         background: rgb(153, 216, 101);
       }
 
       #group4 {
         z-index: 2; /* slide under group 3 and 5 */
       }
-      #group4 .parallax__layer--deep {
+      #group4 > .deep {
         background: rgb(184, 223, 101);
       }
 
       #group5 {
         z-index: 3; /* slide over group 4 and 6 */
       }
-      #group5 .parallax__layer--base {
+      #group5 > .base {
         background: rgb(214, 229, 100);
       }
 
       #group6 {
         z-index: 2; /* slide under group 5 and 7 */
       }
-      #group6 .parallax__layer--back {
+      #group6 > .back {
         background: rgb(245, 235, 100);
       }
 
       #group7 {
         z-index: 3; /* slide over group 7 */
       }
-      #group7 .parallax__layer--base {
+      #group7 > .base {
         background: rgb(255, 241, 100);
       }
     </style>
   </head>
   <body>
     <section id="group1">
-      <div class="parallax__layer--base">
+      <div class="base">
         <div class="title">Base Layer</div>
       </div>
     </section>
     <section id="group2">
-      <div class="parallax__layer--base">
+      <div class="base">
         <div class="title">Base Layer</div>
       </div>
-      <div class="parallax__layer--back">
+      <div class="back">
         <div class="title">Background Layer</div>
       </div>
     </section>
     <section id="group3">
-      <div class="parallax__layer--fore">
+      <div class="foreground">
         <div class="title">Foreground Layer</div>
       </div>
-      <div class="parallax__layer--base">
+      <div class="base">
         <div class="title">Base Layer</div>
       </div>
     </section>
     <section id="group4">
-      <div class="parallax__layer--base">
+      <div class="base">
         <div class="title">Base Layer</div>
       </div>
-      <div class="parallax__layer--back">
+      <div class="back">
         <div class="title">Background Layer</div>
       </div>
-      <div class="parallax__layer--deep">
+      <div class="deep">
         <div class="title">Deep Background Layer</div>
       </div>
     </section>
     <section id="group5">
-      <div class="parallax__layer--fore">
+      <div class="foreground">
         <div class="title">Foreground Layer</div>
       </div>
-      <div class="parallax__layer--base">
+      <div class="base">
         <div class="title">Base Layer</div>
       </div>
     </section>
     <section id="group6">
-      <div class="parallax__layer--back">
+      <div class="back">
         <div class="title">Background Layer</div>
       </div>
-      <div class="parallax__layer--base">
+      <div class="base">
         <div class="title">Base Layer</div>
       </div>
     </section>
     <section id="group7">
-      <div class="parallax__layer--base">
+      <div class="base">
         <div class="title">Base Layer</div>
       </div>
     </section>
