--- a/index.html
+++ b/index.html
@@ -44,25 +44,25 @@
         bottom: 0;
       }
 
-      section > div .foreground {
+      section > .foreground {
         -webkit-transform: translateZ(90px) scale(0.7);
         transform: translateZ(90px) scale(0.7);
         z-index: 1;
       }
 
-      section > div .base {
+      section > .base {
         -webkit-transform: translateZ(0);
         transform: translateZ(0);
         z-index: 4;
       }
 
-      section > div .back {
+      section > .back {
         -webkit-transform: translateZ(-300px) scale(2);
         transform: translateZ(-300px) scale(2);
         z-index: 3;
       }
 
-      section > div .deep {
+      section > .deep {
         -webkit-transform: translateZ(-600px) scale(3);
         transform: translateZ(-600px) scale(3);
         z-index: 2;
