--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       }
 
       /* centre the content in the parallax layers */
-      .title {
+      .centered {
         text-align: center;
         position: absolute;
         left: 50%;
@@ -139,55 +139,55 @@
   <body>
     <section id="group1">
       <div class="base">
-        <div class="title">Base Layer</div>
+        <div class="centered">Base Layer</div>
       </div>
     </section>
     <section id="group2">
       <div class="base">
-        <div class="title">Base Layer</div>
+        <div class="centered">Base Layer</div>
       </div>
       <div class="back">
-        <div class="title">Background Layer</div>
+        <div class="centered">Background Layer</div>
       </div>
     </section>
     <section id="group3">
       <div class="foreground">
-        <div class="title">Foreground Layer</div>
+        <div class="centered">Foreground Layer</div>
       </div>
       <div class="base">
-        <div class="title">Base Layer</div>
+        <div class="centered">Base Layer</div>
       </div>
     </section>
     <section id="group4">
       <div class="base">
-        <div class="title">Base Layer</div>
+        <div class="centered">Base Layer</div>
       </div>
       <div class="back">
-        <div class="title">Background Layer</div>
+        <div class="centered">Background Layer</div>
       </div>
       <div class="deep">
-        <div class="title">Deep Background Layer</div>
+        <div class="centered">Deep Background Layer</div>
       </div>
     </section>
     <section id="group5">
       <div class="foreground">
-        <div class="title">Foreground Layer</div>
+        <div class="centered">Foreground Layer</div>
       </div>
       <div class="base">
-        <div class="title">Base Layer</div>
+        <div class="centered">Base Layer</div>
       </div>
     </section>
     <section id="group6">
       <div class="back">
-        <div class="title">Background Layer</div>
+        <div class="centered">Background Layer</div>
       </div>
       <div class="base">
-        <div class="title">Base Layer</div>
+        <div class="centered">Base Layer</div>
       </div>
     </section>
     <section id="group7">
       <div class="base">
-        <div class="title">Base Layer</div>
+        <div class="centered">Base Layer</div>
       </div>
     </section>
   </body>
