--- a/index.html
+++ b/index.html
@@ -93,6 +93,14 @@
         text-align: center;
       }
 
+      .brut-box {
+        padding: 3%;
+        background-color: white;
+        color: black;
+        border: 2px solid black;
+        box-shadow: 8px 8px 0px black;
+      }
+
       input:checked + .accent1.button-checkbox {
         background-color: darkorange;
       }
@@ -140,11 +148,11 @@
       }
       .img-wrapper-start {
         flex-grow: 0.5;
-        background-color: lightgrey;
+        background-color: transparent;
       }
       .img-wrapper-end {
         flex-grow: 0.5;
-        background-color: lightgrey;
+        background-color: transparent;
       }
 
       .four-grid {
@@ -183,6 +191,22 @@
 
       .text-red {
         color: red;
+      }
+
+      section .spacing {
+        z-index: 1;
+      }
+
+      #atom {
+        z-index: 2;
+      }
+
+      #auserirdisch {
+        z-index: 3;
+      }
+
+      #miast {
+        z-index: 4;
       }
     </style>
     <script>
@@ -274,7 +298,7 @@
     </section>
     <section id="atom">
       <div class="base">
-        <div class="centered">
+        <div class="centered brut-box">
           <h4>Für eine Dystopie braucht es kein Atomkrieg,</h4>
         </div>
       </div>
@@ -286,9 +310,10 @@
         </div>
       </div>
     </section>
+    <section class="spacing"></section>
     <section id="auserdisch">
       <div class="base">
-        <div class="centered">
+        <div class="centered brut-box">
           <h4>oder Außerirdischen Einfluss,</h4>
         </div>
       </div>
@@ -300,9 +325,10 @@
         </div>
       </div>
     </section>
+    <section class="spacing"></section>
     <section id="ai">
       <div class="base">
-        <div class="centered">
+        <div class="centered brut-box">
           <h4>und auch keine KI die uns alle Versklavt.</h4>
         </div>
       </div>
@@ -314,9 +340,12 @@
         </div>
       </div>
     </section>
+    <section class="spacing"></section>
+    <section class="spacing"></section>
+    <section class="spacing"></section>
     <section id="miast">
       <div class="base">
-        <div class="centered">
+        <div class="centered brut-box">
           <h4 class="text-red">Dystopia Now</h4>
         </div>
       </div>
@@ -337,6 +366,7 @@
         </div>
       </div>
     </section>
+    <section class="spacing"></section>
     <section id="end">
       <div class="base">
         <div class="centered">Das Ende</div>
