--- a/index.html
+++ b/index.html
@@ -400,6 +400,9 @@
           <h6 class="text-lightgrey">
             Made by Kai Jellinghaus
             <a href="https://github.com/HurricanKai">@HurricanKai</a>
+            <a href="https://github.com/HurricanKai/dystopianow.org"
+              >on GitHub</a
+            >
           </h6>
         </div>
       </div>
